# data-analytics-mini

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
PythonProject/: excise.py
data/: schema.sql
data/input/: events.csv
homework/: homework_1.py  homework_2.py  homework_3.py  homework_4.py  homework_5.py  homework_6.py  homework_7.py  homework_8.py  homework_9.py  render.html
scripts/: run_pipeline.py
src/ecommerce_analytics/: __init__.py  cleaning.py  cli.py  funnel.py  io_utils.py  metrics.py  retention.py  visualize.py
