[project]
name = "ecommerce-analytics-pandas"
version = "0.1.0"
description = "Pandas-based e-commerce log cleaning and analytics pipeline"
authors = [{name = "you"}]
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0.0",
  "pyarrow>=15.0.0",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
]

[project.scripts]
ecom-pipeline = "ecommerce_analytics.cli:main"
